display list of records

--- a/Views/Home/Burials.cshtml
+++ b/Views/Home/Burials.cshtml
@@ -1,5 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model BurialsViewModel
+
+<h1>Burial Records</h1>
+
+@foreach (Burialmain b in Model.Burials)
+{
+    <partial name="BurialSummary" model="b" />
 }
