--- a/Views/Shared/BurialSummary.cshtml
+++ b/Views/Shared/BurialSummary.cshtml
@@ -3,12 +3,23 @@
 
 @model Burialmain
 
-<h3>@Model</h3>
-<ul>
-    <li>Project Type: @Model</li>
-    <li>Regional Program: @Model</li>
-    <li>Impact: @Model individuals served</li>
-    <li>Project Phase: @Model</li>
-    <li>Project Status: @Model</li>
-</ul>
-<br />
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>Burial ID</th>
+            <th>Depth</th>
+            <th>Preservation</th>
+            <th>Burial Number</th>
+            <th>Excavation Year</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>@Model.Id</td>
+            <td>@Model.Depth</td>
+            <td>@Model.Preservation</td>
+            <td>@Model.Burialnumber</td>
+            <td>@Model.Fieldbookexcavationyear</td>
+        </tr>
+    </tbody>
+</table>
