--- a/Views/Shared/Components/TypesViewComponents/Default.cshtml
+++ b/Views/Shared/Components/TypesViewComponents/Default.cshtml
@@ -1,11 +1,14 @@
 ﻿@model IEnumerable<string>
 
 <div class="d-grid gap-2">
-    <a asp-controller="Home" asp-action="Burials" asp-route-Area="" asp-route-pageNum="1" class="btn btn-outline-secondary">Home</a>
-
+    <a asp-controller="Home" asp-action="Burials" asp-route-area="" asp-route-pageNum="1" class="btn btn-outline-secondary">Home</a>
+    <br />
     @foreach (string t in Model)
     {
-        <a asp-controller="Home" asp-action="Burials" asp-route-Area="@t"
-           class="btn @(ViewBag.SelectedType == t ? "btn-primary" : "btn-outline-secondary")">@t</a>
+        <a asp-controller="Home" asp-action="Burials" asp-route-area="@t" asp-route-pageNum="1"
+           class="btn @(ViewBag.SelectedType == t ? "btn-primary" : "btn-outline-secondary")">
+            @t
+        </a>
+        <br />
     }
 </div>
