--- a/Views/Home/Burials.cshtml
+++ b/Views/Home/Burials.cshtml
@@ -34,7 +34,7 @@
                                 <td>@b.Burialnumber</td>
                                 <td>@b.Fieldbookexcavationyear</td>
                                 <td>
-                                    <a class="btn btn-primary" asp-controller="Home" asp-action="MoreInfo" asp-route-ellaid="1914029871">See More</a>
+                                    <a class="btn btn-primary" asp-controller="Home" asp-action="MoreInfo" asp-route-ellaid="@b.Id" id="popupButton">See More</a>
                                 </td>
                             </tr>
                         </tbody>
