--- a/Views/Home/MoreInfo.cshtml
+++ b/Views/Home/MoreInfo.cshtml
@@ -1,4 +1,10 @@
 ﻿@model Burialmain
 
-<h2>Ella</h2>
-<p>Area</p>
+<h2>More Information!</h2>
+<p>Record ID: @Model.Id</p>
+<p>Extra Text: @Model.Text</p>
+<p>Samples Collected: @Model.Samplescollected</p>
+<p>Length: @Model.Length</p>
+<p>Burial Number: @Model.Burialnumber</p>
+<p>Head Direction: @Model.Headdirection</p>
+<p>Preservation State: @Model.Preservation</p>
