--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using INTEXll
 @using INTEXll.Models
+@using INTEXll.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, INTEXll
 @using INTEXll.Models.ViewModels
