--- a/Views/Shared/Components/TypesViewComponents/Default.cshtml
+++ b/Views/Shared/Components/TypesViewComponents/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<string>
 
 <div class="d-grid gap-2">
-    <a asp-controller="Home" asp-action="Burials" asp-route-area="" asp-route-pageNum="1" class="btn btn-outline-secondary">Home</a>
+    <a asp-controller="Home" asp-action="Burials" asp-route-area="" class="btn btn-outline-secondary">Home</a>
     <br />
     @foreach (string t in Model)
     {
