--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,16 +24,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Burials">Burials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Supervised">Supervised</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Burials">Public Burials</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BurialsAdmin">Admin Burials</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BurialsAdmin">Manage Burials</a>
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Users">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Supervised">Supervised</a>
                         </li>
                     </ul>
                 </div>
