--- a/Views/Home/BurialsAdmin.cshtml
+++ b/Views/Home/BurialsAdmin.cshtml
@@ -36,6 +36,9 @@
                                 <td>
                                     <a class="btn btn-primary" asp-controller="Home" asp-action="EditRecordForm" asp-route-recordid="@b.Id">Edit</a>
                                 </td>
+                                <td>
+                                    <a class="btn btn-primary" asp-controller="Home" asp-action="DeleteRecordForm" asp-route-deleteid="@b.Id">Delete</a>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
