--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,3 +4,5 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, INTEXll
 @using INTEXll.Models.ViewModels
+@using INTEXll.Models.RoleModel 
+@using Microsoft.AspNetCore.Identity 
