--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                 <li><a class="nav-link scrollto active" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a class="nav-link scrollto" asp-area="" asp-controller="Home" asp-action="Burials">Public Burials</a></li>
                 <li><a class="nav-link scrollto" asp-area="" asp-controller="Home" asp-action="BurialsAdmin">Manage Burials</a></li>
-                <li><a class="nav-link scrollto" asp-area="" asp-controller="Home" asp-action="Users">Users</a></li>
+                <li><a class="nav-link scrollto" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a></li>
                 <li><a class="nav-link scrollto" asp-area="" asp-controller="Home" asp-action="Supervised">Supervised Model</a></li>
                 <li><a class="nav-link scrollto" asp-area="" asp-controller="Home" asp-action="Unsupervised">Unsupervised Model</a></li>
                 <partial name="_LoginPartial" />
