--- a/Views/Home/Supervised.cshtml
+++ b/Views/Home/Supervised.cshtml
@@ -1,106 +1,112 @@
-﻿@{
+﻿
+@{ 
+    var prediction = ViewBag.Prediction as Prediction;
 }
-@model INTEXll.Controllers.HomeController.SupervisedData
-
 <h1>Predict Wrapping of Burial</h1>
 
 <p>The more data you enter the more accurate the prediction will be:</p>
 
-<form method="post">
+<form method="post" asp-action="Supervised" asp-controller="Home">
     <div class="form-group">
 
-        <label for="headdirection">Input Head Direction:</label>
-        <select class="form-control" name="headdirection">
-            <option value="">---</option>
-            <option value="N">North</option>
-            <option value="E">East</option>
-            <option value="S">South</option>
-            <option value="W">West</option>
-        </select>
+        <label for="HeadDirection_E">Is Head Direction East? (If yes, type a 1)</label>
+        <input type="number" name="HeadDirection_E" /><br />
 
-        <label for="northsouth">Input NorthSouth:</label>
-        <select class="form-control" name="northsouth">
-            <option value="">---</option>
-            <option value="N">North</option>
-            <option value="S">South</option>
-        </select>
+        <label for="HeadDirection_W">Is Head Direction West? (If yes, type a 1)</label>
+        <input type="number" name="HeadDirection_W" /><br />
 
-        <label for="eastwest">Input EastWest:</label>
-        <select class="form-control" name="eastwest">
-            <option value="">---</option>
-            <option value="E">East</option>
-            <option value="W">West</option>
-        </select>
+        <label for="NorthSouth_N">Is it North? (If yes, type a 1)</label>
+        <input type="number" name="NorthSouth_N" /><br />
 
-        <label for="adultsubadult">Input AdultSubadult:</label>
-        <select class="form-control" name="adultsubadult">
-            <option value="">---</option>
-            <option value="A">Adult</option>
-            <option value="C">Child</option>
-        </select>
 
-        <label for="samplescollected">Input Sample Collected?:</label>
-        <select class="form-control" name="samplescollected">
-            <option value="">---</option>
-            <option value="true">True</option>
-            <option value="false">False</option>
-        </select>
+        <label for="EastWest_E">Is it East? (If yes, type a 1)</label>
+        <input type="number" name="EastWest_E" /><br />
 
-        <label for="area">Input Area:</label>
-        <select class="form-control" name="samplescollected">
-            <option value="">---</option>
-            <option value="SE">South East</option>
-            <option value="SW">South West</option>
-            <option value="NE">North East</option>
-            <option value="NW">North West</option>
-        </select>
 
-        <label for="ageatdeath">Input Age at Death:</label>
-        <select class="form-control" name="ageatdeath">
-            <option value="">---</option>
-            <option value="A">Adult</option>
-            <option value="C">Child</option>
-            <option value="I">Infant</option>
-            <option value="N">Newborn</option>
-        </select>
+        <label for="EastWest_W">Is it West? (If yes, type a 1)</label>
+        <input type="number" name="EastWest_W" /><br />
 
-        <label for="depth">Input Depth:</label>
-        <input type="number" class="form-control" name="depth" step="0.1" />
 
-        <label for="squarenorthsouth">Input Square NorthSouth:</label>
-        <input type="number" class="form-control" name="squarenorthsouth" />
+        <label for="AdultSubAdult_A">Is it an Adult? (If yes, type a 1)</label>
+        <input type="number" name="AdultSubAdult_A" /><br />
 
-        <label for="squareeastwest">Input Square EastWest:</label>
-        <input type="number" class="form-control" name="squareeastwest" />
+        <label for="AdultSubAdult_C">Is it an Child? (If yes, type a 1)</label>
+        <input type="number" name="AdultSubAdult_C" /><br />
 
-        <label for="southtohead">Input South to Head:</label>
-        <input type="number" class="form-control" name="southtohead" step="0.1"/>
+        <label for="SamplesCollected_True">Were samples collected? (If yes, type a 1)</label>
+        <input type="number" name="SamplesCollected_True"/> <br />
 
-        <label for="westtohead">Input West to Head:</label>
-        <input type="number" class="form-control" name="westtohead" step="0.1"/>
+        <label for="SamplesCollected_False">Were samples not collected? (If yes, type a 1)</label>
+        <input type="number" name="SamplesCollected_False" /><br />
 
-        <label for="southtofeet">Input South to Feet:</label>
-        <input type="number" class="form-control" name="southtofeet" step="0.1"/>
+        <label for="SamplesCollected_Other">If samples were simply collected or not, type 1 here.</label>
+        <input type="number" name="SamplesCollected_Other" /><br />
 
-        <label for="westtofeet">Input West to Feet:</label>
-        <input type="number" class="form-control" name="westtofeet" step="0.1"/>
+        <label for="Area_NE">Was the area Northeast? (If yes, type a 1)</label>
+        <input type="number" name="Area_NE" /><br /><br />
 
-        <label for="fieldbookpage">Input Field Book Page:</label>
-        <input type="number" class="form-control" name="fieldbookpage" />
+        <label for="Area_NW">Was the area Northwest? (If yes, type a 1)</label>
+        <input type="number" name="Area_NW" /><br />
 
-        <label for="length">Input Length:</label>
-        <input type="number" class="form-control" name="length" step="0.1"/>
+        <label for="Area_SE">Was the area Southeast? (If yes, type a 1)</label>
+        <input type="number" name="Area_SE" /><br />
 
-        <label for="burialnumber">Input Burial Number:</label>
-        <input type="number" class="form-control" name="burialnumber" />
+        <label for="Area_SW">Was the area Southwest? (If yes, type a 1)</label>
+        <input type="number" name="Area_SW" /><br />
 
-        <label for="fieldbookexcavationyear">Input Field Book Excavation Year:</label>
-        <input type="number" class="form-control" name="fieldbookexcavationyear" />
+        <label for="AgeAtDeath_A">Was the age at death an adult? (If yes, type a 1)</label>
+        <input type="number" name="AgeAtDeath_A" /><br />
+
+        <label for="AgeAtDeath_C">Was the age at death a child? (If yes, type a 1)</label>
+        <input type="number" name="AgeAtDeath_C" /><br />
+
+        <label for="AgeAtDeath_I">Was the age at death an infant? (If yes, type a 1)</label>
+        <input type="number" name="AgeAtDeath_I" /><br />
+
+        <label for="AgeAtDeath_N">Was the age at death a newborn? (If yes, type a 1)</label>
+        <input type="number" name="AgeAtDeath_N" /><br />
+
+        <label for="Depth">Input Depth:</label>
+        <input type="number" class="form-control" name="Depth" step="0.1" /><br />
+
+        <label for="SquareNorthSouth">Input Square NorthSouth:</label>
+        <input type="number" class="form-control" name="SquareNorthSouth" /><br />
+
+        <label for="SquareEastWest">Input Square EastWest:</label>
+        <input type="number" class="form-control" name="SquareEastWest" /><br />
+
+        <label for="SouthToHead">Input South to Head:</label>
+        <input type="number" class="form-control" name="SouthToHead" step="0.1" /><br />
+
+        <label for="WestToHead">Input West to Head:</label>
+        <input type="number" class="form-control" name="WestToHead" step="0.1" /><br />
+
+        <label for="SouthToFeet">Input South to Feet:</label>
+        <input type="number" class="form-control" name="SouthToFeet" step="0.1"/> <br />
+
+        <label for="WesttToFeet">Input West to Feet:</label>
+        <input type="number" class="form-control" name="WestToFeet" step="0.1"/> <br />
+
+        <label for="FieldbookPage">Input Field Book Page:</label>
+        <input type="number" class="form-control" name="FieldbookPage" /><br />
+
+        <label for="Length">Input Length:</label>
+        <input type="number" class="form-control" name="Length" step="0.1" /><br />
+
+        <label for="BurialNumber">Input Burial Number:</label>
+        <input type="number" class="form-control" name="BurialNumber" /><br />
+
+        <label for="FieldbookExcavationYear">Input Field Book Excavation Year:</label>
+        <input type="number" class="form-control" name="FieldbookExcavationYear" /><br />
     </div>
     <button type="submit" class="btn btn-primary">Make Prediction</button>
 </form>
 
-@if (ViewData["output"] != null)
+@if (prediction != null)
 {
-    <p>Prediction: @ViewData["output"]</p>
+    <p>Your Prediction is: @prediction.PredictedValue</p>
+}
+else
+{
+    <p>Your Prediction didn't work lol</p>
 }
