--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -61,9 +61,9 @@
     </div>
 </header>
 <body>
-    <div class="container mt-5">
+    <div class="">
         <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3 mt-5"  style="padding-top: 100px">
+        <main role="main" class="pb-3"  style="padding-top: 100px">
             @RenderBody()
         </main>
     </div>
