--- a/Views/Home/Supervised.cshtml
+++ b/Views/Home/Supervised.cshtml
@@ -1,112 +1,114 @@
 ﻿
-@{ 
+@{
     var prediction = ViewBag.Prediction as Prediction;
 }
-<h1>Predict Wrapping of Burial</h1>
-<br />
-<p>The more data you enter the more accurate the prediction will be:</p>
+<div class="container mt-5">
+    <h1>Predict Wrapping of Burial</h1>
+    <br />
+    <p>The more data you enter the more accurate the prediction will be:</p>
 
-<form method="post" asp-action="Supervised" asp-controller="Home">
-    <div class="form-group">
+    <form method="post" asp-action="Supervised" asp-controller="Home">
+        <div class="form-group">
 
-        <label for="HeadDirection_E">Is Head Direction East? (If yes, type a 1)</label>
-        <input type="number" name="HeadDirection_E" /><br />
+            <label for="HeadDirection_E">Is Head Direction East? (If yes, type a 1)</label>
+            <input type="number" name="HeadDirection_E" /><br />
 
-        <label for="HeadDirection_W">Is Head Direction West? (If yes, type a 1)</label>
-        <input type="number" name="HeadDirection_W" /><br />
+            <label for="HeadDirection_W">Is Head Direction West? (If yes, type a 1)</label>
+            <input type="number" name="HeadDirection_W" /><br />
 
-        <label for="NorthSouth_N">Is it North? (If yes, type a 1)</label>
-        <input type="number" name="NorthSouth_N" /><br />
-
-
-        <label for="EastWest_E">Is it East? (If yes, type a 1)</label>
-        <input type="number" name="EastWest_E" /><br />
+            <label for="NorthSouth_N">Is it North? (If yes, type a 1)</label>
+            <input type="number" name="NorthSouth_N" /><br />
 
 
-        <label for="EastWest_W">Is it West? (If yes, type a 1)</label>
-        <input type="number" name="EastWest_W" /><br />
+            <label for="EastWest_E">Is it East? (If yes, type a 1)</label>
+            <input type="number" name="EastWest_E" /><br />
 
 
-        <label for="AdultSubAdult_A">Is it an Adult? (If yes, type a 1)</label>
-        <input type="number" name="AdultSubAdult_A" /><br />
+            <label for="EastWest_W">Is it West? (If yes, type a 1)</label>
+            <input type="number" name="EastWest_W" /><br />
 
-        <label for="AdultSubAdult_C">Is it an Child? (If yes, type a 1)</label>
-        <input type="number" name="AdultSubAdult_C" /><br />
 
-        <label for="SamplesCollected_True">Were samples collected? (If yes, type a 1)</label>
-        <input type="number" name="SamplesCollected_True"/> <br />
+            <label for="AdultSubAdult_A">Is it an Adult? (If yes, type a 1)</label>
+            <input type="number" name="AdultSubAdult_A" /><br />
 
-        <label for="SamplesCollected_False">Were samples not collected? (If yes, type a 1)</label>
-        <input type="number" name="SamplesCollected_False" /><br />
+            <label for="AdultSubAdult_C">Is it an Child? (If yes, type a 1)</label>
+            <input type="number" name="AdultSubAdult_C" /><br />
 
-        <label for="SamplesCollected_Other">If samples were simply collected or not, type 1 here.</label>
-        <input type="number" name="SamplesCollected_Other" /><br />
+            <label for="SamplesCollected_True">Were samples collected? (If yes, type a 1)</label>
+            <input type="number" name="SamplesCollected_True" /> <br />
 
-        <label for="Area_NE">Was the area Northeast? (If yes, type a 1)</label>
-        <input type="number" name="Area_NE" /><br /><br />
+            <label for="SamplesCollected_False">Were samples not collected? (If yes, type a 1)</label>
+            <input type="number" name="SamplesCollected_False" /><br />
 
-        <label for="Area_NW">Was the area Northwest? (If yes, type a 1)</label>
-        <input type="number" name="Area_NW" /><br />
+            <label for="SamplesCollected_Other">If samples were simply collected or not, type 1 here.</label>
+            <input type="number" name="SamplesCollected_Other" /><br />
 
-        <label for="Area_SE">Was the area Southeast? (If yes, type a 1)</label>
-        <input type="number" name="Area_SE" /><br />
+            <label for="Area_NE">Was the area Northeast? (If yes, type a 1)</label>
+            <input type="number" name="Area_NE" /><br /><br />
 
-        <label for="Area_SW">Was the area Southwest? (If yes, type a 1)</label>
-        <input type="number" name="Area_SW" /><br />
+            <label for="Area_NW">Was the area Northwest? (If yes, type a 1)</label>
+            <input type="number" name="Area_NW" /><br />
 
-        <label for="AgeAtDeath_A">Was the age at death an adult? (If yes, type a 1)</label>
-        <input type="number" name="AgeAtDeath_A" /><br />
+            <label for="Area_SE">Was the area Southeast? (If yes, type a 1)</label>
+            <input type="number" name="Area_SE" /><br />
 
-        <label for="AgeAtDeath_C">Was the age at death a child? (If yes, type a 1)</label>
-        <input type="number" name="AgeAtDeath_C" /><br />
+            <label for="Area_SW">Was the area Southwest? (If yes, type a 1)</label>
+            <input type="number" name="Area_SW" /><br />
 
-        <label for="AgeAtDeath_I">Was the age at death an infant? (If yes, type a 1)</label>
-        <input type="number" name="AgeAtDeath_I" /><br />
+            <label for="AgeAtDeath_A">Was the age at death an adult? (If yes, type a 1)</label>
+            <input type="number" name="AgeAtDeath_A" /><br />
 
-        <label for="AgeAtDeath_N">Was the age at death a newborn? (If yes, type a 1)</label>
-        <input type="number" name="AgeAtDeath_N" /><br />
+            <label for="AgeAtDeath_C">Was the age at death a child? (If yes, type a 1)</label>
+            <input type="number" name="AgeAtDeath_C" /><br />
 
-        <label for="Depth">Input Depth:</label>
-        <input type="number" class="form-control" name="Depth" step="0.1" /><br />
+            <label for="AgeAtDeath_I">Was the age at death an infant? (If yes, type a 1)</label>
+            <input type="number" name="AgeAtDeath_I" /><br />
 
-        <label for="SquareNorthSouth">Input Square NorthSouth:</label>
-        <input type="number" class="form-control" name="SquareNorthSouth" /><br />
+            <label for="AgeAtDeath_N">Was the age at death a newborn? (If yes, type a 1)</label>
+            <input type="number" name="AgeAtDeath_N" /><br />
 
-        <label for="SquareEastWest">Input Square EastWest:</label>
-        <input type="number" class="form-control" name="SquareEastWest" /><br />
+            <label for="Depth">Input Depth:</label>
+            <input type="number" class="form-control" name="Depth" step="0.1" /><br />
 
-        <label for="SouthToHead">Input South to Head:</label>
-        <input type="number" class="form-control" name="SouthToHead" step="0.1" /><br />
+            <label for="SquareNorthSouth">Input Square NorthSouth:</label>
+            <input type="number" class="form-control" name="SquareNorthSouth" /><br />
 
-        <label for="WestToHead">Input West to Head:</label>
-        <input type="number" class="form-control" name="WestToHead" step="0.1" /><br />
+            <label for="SquareEastWest">Input Square EastWest:</label>
+            <input type="number" class="form-control" name="SquareEastWest" /><br />
 
-        <label for="SouthToFeet">Input South to Feet:</label>
-        <input type="number" class="form-control" name="SouthToFeet" step="0.1"/> <br />
+            <label for="SouthToHead">Input South to Head:</label>
+            <input type="number" class="form-control" name="SouthToHead" step="0.1" /><br />
 
-        <label for="WesttToFeet">Input West to Feet:</label>
-        <input type="number" class="form-control" name="WestToFeet" step="0.1"/> <br />
+            <label for="WestToHead">Input West to Head:</label>
+            <input type="number" class="form-control" name="WestToHead" step="0.1" /><br />
 
-        <label for="FieldbookPage">Input Field Book Page:</label>
-        <input type="number" class="form-control" name="FieldbookPage" /><br />
+            <label for="SouthToFeet">Input South to Feet:</label>
+            <input type="number" class="form-control" name="SouthToFeet" step="0.1" /> <br />
 
-        <label for="Length">Input Length:</label>
-        <input type="number" class="form-control" name="Length" step="0.1" /><br />
+            <label for="WesttToFeet">Input West to Feet:</label>
+            <input type="number" class="form-control" name="WestToFeet" step="0.1" /> <br />
 
-        <label for="BurialNumber">Input Burial Number:</label>
-        <input type="number" class="form-control" name="BurialNumber" /><br />
+            <label for="FieldbookPage">Input Field Book Page:</label>
+            <input type="number" class="form-control" name="FieldbookPage" /><br />
 
-        <label for="FieldbookExcavationYear">Input Field Book Excavation Year:</label>
-        <input type="number" class="form-control" name="FieldbookExcavationYear" /><br />
+            <label for="Length">Input Length:</label>
+            <input type="number" class="form-control" name="Length" step="0.1" /><br />
+
+            <label for="BurialNumber">Input Burial Number:</label>
+            <input type="number" class="form-control" name="BurialNumber" /><br />
+
+            <label for="FieldbookExcavationYear">Input Field Book Excavation Year:</label>
+            <input type="number" class="form-control" name="FieldbookExcavationYear" /><br />
+        </div>
+        <button type="submit" class="btn btn-primary">Make Prediction</button>
+    </form>
+
+    @if (prediction != null)
+    {
+        <p>Your Prediction is: @prediction.PredictedValue</p>
+    }
+    else
+    {
+        <p>Your Prediction didn't work lol</p>
+    }
     </div>
-    <button type="submit" class="btn btn-primary">Make Prediction</button>
-</form>
-
-@if (prediction != null)
-{
-    <p>Your Prediction is: @prediction.PredictedValue</p>
-}
-else
-{
-    <p>Your Prediction didn't work lol</p>
-}
