--- a/Views/Home/Unsupervised.cshtml
+++ b/Views/Home/Unsupervised.cshtml
@@ -1,47 +1,49 @@
 ﻿@{
 }
-<h1>Unsupervised Model Observations</h1>
-<br />
-<br />
-<h3 style="text-underline-offset">Correlation of Location and Wrapping</h3>
-<br />
-<p>
-    The 3D model shows the dig site by sectors north/south, east/west, and by depth reflected appropriatley in the graph.
-    As you can see there are a lot more fully wrapped remains on the North end of the site. This may imply that the location
-    of the burial had some significance to the egyptions causing the people buried in that spot to have more wrappings
-    than other burial locations of the site.
-</p>
-<script>
-    var currentImage = 1;
-    var image1 = new Image();
-    var image2 = new Image();
-    image1.src = "https://localhost:44339/assets/img/wrapping_1.png";
-    image2.src = "https://localhost:44339/assets/img/wrapping_2.png";
+<div class="container mt-5">
+    <h1>Unsupervised Model Observations</h1>
+    <br />
+    <br />
+    <h3 style="text-underline-offset">Correlation of Location and Wrapping</h3>
+    <br />
+    <p>
+        The 3D model shows the dig site by sectors north/south, east/west, and by depth reflected appropriatley in the graph.
+        As you can see there are a lot more fully wrapped remains on the North end of the site. This may imply that the location
+        of the burial had some significance to the egyptions causing the people buried in that spot to have more wrappings
+        than other burial locations of the site.
+    </p>
+    <script>
+        var currentImage = 1;
+        var image1 = new Image();
+        var image2 = new Image();
+        image1.src = "https://localhost:44339/assets/img/wrapping_1.png";
+        image2.src = "https://localhost:44339/assets/img/wrapping_2.png";
 
-    function changeImage() {
-        var img = document.getElementById('image');
-        if (currentImage == 1) {
-            img.src = "https://localhost:44339/assets/img/wrapping_1.png";
-            currentImage = 2;
-        } else {
-            img.src = "https://localhost:44339/assets/img/wrapping_2.png";
-            currentImage = 1;
+        function changeImage() {
+            var img = document.getElementById('image');
+            if (currentImage == 1) {
+                img.src = "https://localhost:44339/assets/img/wrapping_1.png";
+                currentImage = 2;
+            } else {
+                img.src = "https://localhost:44339/assets/img/wrapping_2.png";
+                currentImage = 1;
+            }
         }
-    }
 
-    setInterval(changeImage, 1000);
-</script>
-<img id="image" src="https://localhost:44339/assets/img/wrapping_1.png" />
-<br /> <br /> <br /> <br />
-<div style="background-color: darkgray; height: 1px; width: 90%; margin: 0 auto;"></div>
-<br /> <br /> <br />
+        setInterval(changeImage, 1000);
+    </script>
+    <img id="image" src="https://localhost:44339/assets/img/wrapping_1.png" />
+    <br /> <br /> <br /> <br />
+    <div style="background-color: darkgray; height: 1px; width: 90%; margin: 0 auto;"></div>
+    <br /> <br /> <br />
 
-<h3>Correlation of Age at Death and Wrapping</h3>
-<br />
-<p>
-    This bar graph shows the correlation between the burials of children and fully wrapped burials. You can read this graph
-    by looking at the right side meaning the burial was a child and seeing how many were fully wrapped (the orange) vs.
-    other age groups (left bar). This shows that the people would fully wrap the children more often than infants, newborns and adults.
-</p>
-<br />
-<img src="~/assets/img/Screenshot 2023-04-12 145729.png" />
+    <h3>Correlation of Age at Death and Wrapping</h3>
+    <br />
+    <p>
+        This bar graph shows the correlation between the burials of children and fully wrapped burials. You can read this graph
+        by looking at the right side meaning the burial was a child and seeing how many were fully wrapped (the orange) vs.
+        other age groups (left bar). This shows that the people would fully wrap the children more often than infants, newborns and adults.
+    </p>
+    <br />
+    <img src="~/assets/img/Screenshot 2023-04-12 145729.png" />
+</div>
