--- a/Views/Home/Supervised.cshtml
+++ b/Views/Home/Supervised.cshtml
@@ -7,7 +7,7 @@
     <br />
     <p>The more data you enter the more accurate the prediction will be:</p>
 
-    <form method="post" asp-action="Supervised" asp-controller="Home">
+    <form method="post" asp-action="Supervised" asp-controller="Home" class="php-email-form .form-group">
         <div class="form-group">
 
             <label for="HeadDirection_E">Is Head Direction East? (If yes, type a 1)</label>
