--- a/Views/Shared/_TextileStructureTable.cshtml
+++ b/Views/Shared/_TextileStructureTable.cshtml
@@ -5,7 +5,7 @@
 }
 @model BurialsViewModel
 
-<table class="table table-bordered">
+<table class="table text-white" style="background: rgba(0, 0, 0, 0.4);">
     <thead>
         <tr>
             <th>ID</th>
@@ -19,7 +19,7 @@
             <tr>
                 <td>@b.Id</td>
                 <td>@b.Structureid</td>
-                <td>@b.Value</td>
+                <td>@b.TSValue</td>
             </tr>
         }
     </tbody>
