--- a/Views/Home/Burials.cshtml
+++ b/Views/Home/Burials.cshtml
@@ -1,39 +1,40 @@
 ﻿@model BurialsViewModel
-    <div class="container mt-5">
-        <h1 class="text-center">Burial Records</h1>
-        <body>
-            <p>The data displayed below are records of various categories of information gathered about a collection of burials that have been uncovered. As you look through the data, you can filter in various ways to look for patterns, and click on each record for more information!</p>
-            <h3>Filter by Table</h3>
+<body>
+    <section id="about" class="about" style="margin-top: -100px; margin-bottom: -20px; width: 100%; background-size: cover;">
+        <div class="container mt-5">
             <div class="row m-1 p-1">
+                <h1 class="text-center" style="color:black">Burial Records</h1>
+                <p style="color:black">The data displayed below are records of various categories of information gathered about a collection of burials that have been uncovered. As you look through the data, you can filter in various ways to look for patterns, and click on each record for more information!</p>
+                <h3 style="color:black">Filter by Table</h3>
                 <div id="types" class="col-3">
                     <div id="types" class="col-3">
                         <a asp-controller="Home" asp-action="Burials" asp-route-area="BurialMain" asp-route-pageNum="1"
-                           class="btn @(ViewBag.SelectedType == "BurialMain" ? "btn-success" : "btn-outline-secondary")">
+                           class="btn @(ViewBag.SelectedType == "BurialMain" ? "btn-success" : "btn-outline-light")">
                             Burial Main
-                        </a>
+                        </a><br />
                         <a asp-controller="Home" asp-action="Burials" asp-route-area="Textile" asp-route-pageNum="1"
-                           class="btn @(ViewBag.SelectedType == "Textile" ? "btn-success" : "btn-outline-secondary")">
+                           class="btn @(ViewBag.SelectedType == "Textile" ? "btn-success" : "btn-outline-light")">
                             Textile
-                        </a>
+                        </a><br />
                         <a asp-controller="Home" asp-action="Burials" asp-route-area="TextileColor" asp-route-pageNum="1"
-                           class="btn @(ViewBag.SelectedType == "TextileColor" ? "btn-success" : "btn-outline-secondary")">
+                           class="btn @(ViewBag.SelectedType == "TextileColor" ? "btn-success" : "btn-outline-light")">
                             Textile Color
-                        </a>
-                        <a asp-controller="Home" asp-action="Burials" asp-route-area="TextileStructure" asp-route-pageNum="1"
-                           class="btn @(ViewBag.SelectedType == "TextileStructure" ? "btn-success" : "btn-outline-secondary")">
+                        </a><br />
+                        <a asp-controller="Home" asp-action="Burials" asp-route-area="Structure" asp-route-pageNum="1"
+                           class="btn @(ViewBag.SelectedType == "Structure" ? "btn-success" : "btn-outline-light")">
                             Textile Structure
-                        </a>
+                        </a><br />
                         <a asp-controller="Home" asp-action="Burials" asp-route-area="TextileFunction" asp-route-pageNum="1"
-                           class="btn @(ViewBag.SelectedType == "TextileFunction" ? "btn-success" : "btn-outline-secondary")">
+                           class="btn @(ViewBag.SelectedType == "TextileFunction" ? "btn-success" : "btn-outline-light")">
                             Textile Function
-                        </a>
+                        </a><br />
                         <a asp-controller="Home" asp-action="Burials" asp-route-area="BodyAnalysisChart" asp-route-pageNum="1"
-                           class="btn @(ViewBag.SelectedType == "BodyAnalysisChart" ? "btn-success" : "btn-outline-secondary")">
+                           class="btn @(ViewBag.SelectedType == "BodyAnalysisChart" ? "btn-success" : "btn-outline-light")">
                             Body Analysis Chart
-                        </a>
+                        </a><br />
                     </div>
                     <br />
-                    <h3>Filter by Attribute</h3>
+                    <h3 style="color:black">Filter by Attribute</h3>
                     <div id="filters">
                         @if (ViewBag.SelectedType == "BurialMain")
                         {
@@ -42,46 +43,46 @@
                                     <div class="row">
 
                                         <div class="form-group col">
-                                            <label for="SquareNorthSouthInput">North/South Square</label>
+                                            <label for="SquareNorthSouthInput" style="color:white">North/South Square</label>
                                             <input type="text" class="form-control" id="SquareNorthSouthInput" name="SquareNS" placeholder="190">
                                         </div>
                                         <div class="form-group col">
-                                            <label for="NorthSouthInput">North/South Location</label>
+                                            <label for="NorthSouthInput" style="color:white">North/South Location</label>
                                             <input type="text" class="form-control" id="NorthSouthInput" placeholder="N" name="NS">
                                         </div>
                                         <div class="form-group col">
-                                            <label for="SquareEastWestInput">East/West Square</label>
+                                            <label for="SquareEastWestInput" style="color:white">East/West Square</label>
                                             <input type="text" class="form-control" id="SquareEastWestInput" placeholder="30" name="SquareEW">
                                         </div>
                                         <div class="form-group col">
-                                            <label for="EastWestInput">East/West Location</label>
+                                            <label for="EastWestInput" style="color:white">East/West Location</label>
                                             <input type="text" class="form-control" id="EastWestInput" placeholder="E" name="EW">
                                         </div>
                                         <div class="form-group col">
-                                            <label for="AreaInput">Area</label>
+                                            <label for="AreaInput" style="color:white">Area</label>
                                             <input type="text" class="form-control" id="AreaInput" placeholder="NE" name="Area">
                                         </div>
                                         <div class="form-group col">
-                                            <label for="BurialNumberInput">Burial Number</label>
+                                            <label for="BurialNumberInput" style="color:white">Burial Number</label>
                                             <input type="number" class="form-control" id="BurialNumberInput" placeholder="60" name="BurialNumber">
                                         </div>
 
                                     </div>
                                     <div class="row">
                                         <div class="form-group col">
-                                            <label for="HeadDirectionInput">Head Direction</label>
+                                            <label for="HeadDirectionInput" style="color:white">Head Direction</label>
                                             <input type="text" class="form-control" id="HeadDirectionInput" placeholder="W" name="HeadDirection">
                                         </div>
                                         <div class="form-group col">
-                                            <label for="AgeAtDeathInput">Age at Death</label>
+                                            <label for="AgeAtDeathInput" style="color:white">Age at Death</label>
                                             <input type="text" class="form-control" id="AgeAtDeathInput" placeholder="C" name="AgeAtDeath">
                                         </div>
                                         <div class="form-group col">
-                                            <label for="HeadDirectionInput">Sex</label>
+                                            <label for="HeadDirectionInput" style="color:white">Sex</label>
                                             <input type="text" class="form-control" id="HeadDirectionInput" placeholder="F" name="Sex">
                                         </div>
                                         <div class="form-group col">
-                                            <label for="HeadDirectionInput">Hair Color</label>
+                                            <label for="HeadDirectionInput" style="color:white">Hair Color</label>
                                             <input type="text" class="form-control" id="HeadDirectionInput" placeholder="B" name="HairColor">
                                         </div>
                                     </div>
@@ -96,7 +97,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="form-group col">
-                                            <label for="EstimateStatureInput">Estimate Stature</label>
+                                            <label for="EstimateStatureInput" style="color:white">Estimate Stature</label>
                                             <input type="text" class="form-control" id="EstimateStatureInput" placeholder="190" name="EstimateStature">
                                         </div>
                                         <button type="submit" class="btn btn-primary">Submit</button>
@@ -110,7 +111,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="form-group col">
-                                            <label for="Locale">Locale</label>
+                                            <label for="Locale" style="color:white">Locale</label>
                                             <input type="text" class="form-control" id="Locale" placeholder="150/160N 0/10W" name="Locale">
                                         </div>
                                         <br />
@@ -125,7 +126,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="form-group col">
-                                            <label for="Value">Value</label>
+                                            <label for="Value" style="color:white">Value</label>
                                             <input type="text" class="form-control" id="Value" placeholder="Ribbon- Torn Strip" name="Value">
                                         </div>
                                         <br />
@@ -134,13 +135,13 @@
                                 </div>
                             </form>
                         }
-                        else if (ViewBag.SelectedType == "TextileStructure")
+                        else if (ViewBag.SelectedType == "Structure")
                         {
-                            <form method="post" asp-action="Burials" asp-route-table="TextileStructure" asp-route-pageNum="1">
+                            <form method="post" asp-action="Burials" asp-route-table="Structure" asp-route-pageNum="1">
                                 <div class="container">
                                     <div class="row">
                                         <div class="form-group col">
-                                            <label for="Value">Value</label>
+                                            <label for="Value" style="color:white">Value</label>
                                             <input type="text" class="form-control" id="Value" placeholder="10" name="Value">
                                         </div>
                                         <br />
@@ -155,7 +156,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="form-group col">
-                                            <label for="Value">Value</label>
+                                            <label for="Value" style="color:white">Value</label>
                                             <input type="text" class="form-control" id="Value" placeholder="Undyed" name="Value">
                                         </div>
                                         <br />
@@ -180,7 +181,7 @@
                         {
                             <partial name="_TextileTable" />
                         }
-                        else if (ViewBag.SelectedType == "TextileStructure")
+                        else if (ViewBag.SelectedType == "Structure")
                         {
                             <partial name="_TextileStructureTable" />
                         }
@@ -199,6 +200,7 @@
                         }
                     </div>
                 </div>
-            </div>
-        </body>
-        </div>
+            </div>        <div page-model="" page-blah="@Model.PageInfo" page-action="Burials" page-class="btn" page-class-normal="btn-outline-light" page-class-selected="btn-primary" page-class-enabled="true" class="btn-group pull-right m-1"></div>
+</div>
+</section>
+</body>
