--- a/Views/Home/BurialsAdmin.cshtml
+++ b/Views/Home/BurialsAdmin.cshtml
@@ -1,51 +1,54 @@
 ﻿@model BurialsViewModel
-    <div class="container mt-5">
-        <h1 class="text-center">Manage Burial Records</h1>
-        <p>The data displayed below are records of various categories of information gathered about a collection of burials that have been uncovered.You can add, remove, and edit records as you see fit.</p>
-        <a class="btn btn-success" asp-controller="Home" asp-action="AddRecord">Add a Record</a>
-        <br />
-        <div class="row">
-            <div class="col-9">
-                <div>
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Burial ID</th>
-                                <th>Depth</th>
-                                <th>Preservation</th>
-                                <th>Burial Number</th>
-                                <th>Excavation Year</th>
-                                <th>Wrapping</th>
-                                <th>West to Head</th>
-                                <th>Age at Death</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (Burialmain b in Model.Burials)
-                            {
+    <section id="about" class="about" style="margin-top: -100px; margin-bottom: -20px; width: 100%; background-size: cover;">
+        <div class="container mt-5">
+            <br />
+            <div class="row">
+                <div class="col-9">
+                    <h1 class="text-center" style="color:white;">Manage Burial Records</h1>
+                    <p style="color:white;">The data displayed below are records of various categories of information gathered about a collection of burials that have been uncovered.You can add, remove, and edit records as you see fit.</p>
+                    <div>
+                        <a class="btn btn-success" asp-controller="Home" asp-action="AddRecord">Add a Record</a>
+                        <br /><br />
+                        <table class="table text-white" style="background: rgba(0, 0, 0, 0.4);">
+                            <thead>
                                 <tr>
-                                    <td>@b.Id</td>
-                                    <td>@b.Depth</td>
-                                    <td>@b.Preservation</td>
-                                    <td>@b.Burialnumber</td>
-                                    <td>@b.Fieldbookexcavationyear</td>
-                                    <td>@b.Wrapping</td>
-                                    <td>@b.Westtohead</td>
-                                    <td>@b.Ageatdeath</td>
-                                    <td>
-                                        <a class="btn btn-primary" asp-controller="Home" asp-action="EditRecordForm" asp-route-recordid="@b.Id">Edit</a>
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-danger" asp-controller="Home" asp-action="DeleteRecordForm" asp-route-deleteid="@b.Id">Delete</a>
-                                    </td>
+                                    <th>Burial ID</th>
+                                    <th>Depth</th>
+                                    <th>Preservation</th>
+                                    <th>Burial Number</th>
+                                    <th>Excavation Year</th>
+                                    <th>Wrapping</th>
+                                    <th>West to Head</th>
+                                    <th>Age at Death</th>
                                 </tr>
-                            }
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                @foreach (Burialmain b in Model.Burials)
+                                {
+                                    <tr>
+                                        <td>@b.Id</td>
+                                        <td>@b.Depth</td>
+                                        <td>@b.Preservation</td>
+                                        <td>@b.Burialnumber</td>
+                                        <td>@b.Fieldbookexcavationyear</td>
+                                        <td>@b.Wrapping</td>
+                                        <td>@b.Westtohead</td>
+                                        <td>@b.Ageatdeath</td>
+                                        <td>
+                                            <a class="btn btn-primary" asp-controller="Home" asp-action="EditRecordForm" asp-route-recordid="@b.Id">Edit</a>
+                                        </td>
+                                        <td>
+                                            <a class="btn btn-danger" asp-controller="Home" asp-action="DeleteRecordForm" asp-route-deleteid="@b.Id">Delete</a>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
 
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div page-model="" page-blah="@Model.PageInfo" page-action="Burials" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" page-class-enabled="true" class="btn-group pull-right m-1"></div>
+            <div page-model="" page-blah="@Model.PageInfo" page-action="BurialsAdmin" page-class="btn" page-class-normal="btn-outline-light" page-class-selected="btn-primary" page-class-enabled="true" class="btn-group pull-right m-1"></div>
         </div>
+     </section>
