--- a/Views/Shared/_BurialMainTable.cshtml
+++ b/Views/Shared/_BurialMainTable.cshtml
@@ -6,7 +6,7 @@
 
 @model BurialsViewModel
 
-<table class="table table-bordered">
+<table class="table text-white" style="background: rgba(0, 0, 0, 0.4);">
     <thead>
         <tr>
             <th>Burial ID</th>
