--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
     </li>
     <li>
         <form role="form" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button type="submit" class="btn-book animated fadeInUp scrollto">Logout</button>
+            <button type="submit"class="book-a-table-btn scrollto d-none d-lg-flex bg-dark">Logout</button>
         </form>
     </li>
 }
