--- a/Views/Shared/_SeeMore.cshtml
+++ b/Views/Shared/_SeeMore.cshtml
@@ -3,27 +3,27 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="seeMore">Burial Details</h5>
+                    <h5 class="modal-title" id="seeMore" style="color:black">Burial Details</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="modalContent">
                     <!-- Modal content will be loaded dynamically here -->
-                    <h2>More Information!</h2>
-                    <p>Record ID: @Model.Id</p>
-                    <p>Extra Text: @Model.Text</p>
-                    <p>Area: @Model.Area</p>
-                    <p>Sex: @Model.Sex</p>
-                    <p>Age at Death: @Model.Ageatdeath</p>
-                    <p>North/South Square: @Model.Squarenorthsouth</p>
-                    <p>North/South Location: @Model.Northsouth</p>
-                    <p>East/West Square: @Model.Squareeastwest</p>
-                    <p>East/West Location: @Model.Eastwest</p>
-                    <p>Samples Collected: @Model.Samplescollected</p>
-                    <p>Length: @Model.Length</p>
-                    <p>Hair Color: @Model.Haircolor</p>
-                    <p>Burial Number: @Model.Burialnumber</p>
-                    <p>Head Direction: @Model.Headdirection</p>
-                    <p>Preservation State: @Model.Preservation</p>
+                    <h2 style="color:black">More Information!</h2>
+                    <p style="color:black">Record ID: @Model.Id</p>
+                    <p style="color:black">Extra Text: @Model.Text</p>
+                    <p style="color:black">Area: @Model.Area</p>
+                    <p style="color:black">Sex: @Model.Sex</p>
+                    <p style="color:black">Age at Death: @Model.Ageatdeath</p>
+                    <p style="color:black">North/South Square: @Model.Squarenorthsouth</p>
+                    <p style="color:black">North/South Location: @Model.Northsouth</p>
+                    <p style="color:black">East/West Square: @Model.Squareeastwest</p>
+                    <p style="color:black">East/West Location: @Model.Eastwest</p>
+                    <p style="color:black">Samples Collected: @Model.Samplescollected</p>
+                    <p style="color:black">Length: @Model.Length</p>
+                    <p style="color:black">Hair Color: @Model.Haircolor</p>
+                    <p style="color:black">Burial Number: @Model.Burialnumber</p>
+                    <p style="color:black">Head Direction: @Model.Headdirection</p>
+                    <p style="color:black">Preservation State: @Model.Preservation</p>
                 </div>
             </div>
         </div>
