--- a/Views/Shared/_TextileFunctionTable.cshtml
+++ b/Views/Shared/_TextileFunctionTable.cshtml
@@ -5,7 +5,7 @@
 }
 @model BurialsViewModel
 
-<table class="table table-bordered">
+<table class="table text-white" style="background: rgba(0, 0, 0, 0.4);">
     <thead>
         <tr>
             <th>ID</th>
