--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -471,6 +471,7 @@ h6 {
   right: 0;
 }
 
+
 #hero .container {
   padding-top: 110px;
 }
@@ -759,6 +760,24 @@ section {
   top: 0;
   left: 0;
   right: 0;
+}
+
+.ella {
+    background: url("../img/main.jpg") center center;
+    background-size: cover;
+    position: relative;
+    padding: 80px 0;
+    width:contain
+}
+
+ella:before {
+    content: "";
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .about .about-img {
