--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,26 +6,36 @@
                     <div class="col-lg-6 order-1 order-lg-2">
                     </div>
                     <div class="text-center">
-                        <h1 class="display-4">Welcome</h1>
+                        <br /><br />
+                        <br />
+                        <p class="display-2" style="font-size:80px;">Welcome to Fag El-Gamous.</p>
+                        <br /><br />
                     </div>
-                    <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-                        <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
-                        <p class="fst-italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                            magna aliqua.
-                        </p>
-                        <ul>
-                            <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                            <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                            <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                        </ul>
-                        <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum
-                        </p>
+                    <div class="card-group">
+                        <div class="card text-bg-dark">
+                            <img src="~/lib/gamous.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">What is Fag El-Gamous?</h5>
+                                <p class="card-text">Fag el-Gamous, or the "Way of the Water Buffalo," is a significant and expansive burial ground located in Egypt that has been the subject of archaeological exploration for more than 25 years, largely led by researchers from BYU. The excavation has received global recognition due to the intriguing knowledge that has been acquired by analyzing the mummies of Fag el-Gamous.</p>
+                            </div>
+                        </div>
+                        <div class="card text-bg-dark">
+                            <img src="~/lib/mummies.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Excavation</h5>
+                                <p class="card-text">Over the course of several years, extensive research has been conducted, involving the excavation of over 1,000 mummies. Data has been meticulously collected in field notes, spreadsheets, and basic databases detailing the location of each mummy, their physical orientation within the burial site, depth of interment, hair color, textile wrapping, gender, age, bone dimensions, and much more!. </p>
+                            </div>
+                        </div>
+                        <div class="card text-bg-dark">
+                            <img src="~/lib/sand.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">The Grid</h5>
+                                <p class="card-text">To facilitate the organization and recording of findings, the excavation site has been structured using a grid system. Each square is defined by its North (N), East (E), South (S), and West (W) coordinates from an established origin point. Two numbers are used to indicate the distance from the origin in a particular direction, then subdivided into quadrants - Northwest (NW), Northeast (NE), Southeast (SE), and Southwest (SW).</p>
+                            </div>
+                        </div>
                     </div>
+</section>
                 </div>
-            </div>
+</div>
         </div>
     </section>
